# vdy

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  conanfile.py  gui.bat
.claude/rules/: architect.md  documenter.md  implementer.md  planner.md  reviewer.md
conf/: build.yml
scripts/: build.py  build_gui.py  vdy_gui.py
src/component/: CMakeLists.txt  vdy_function.cpp  vdy_function.hpp  vdy_ports.hpp
src/component/common/: CMakeLists.txt
src/component/common/framework/: i_vdy_function.hpp  ports.hpp  vdy_params.hpp
src/platform/autosar/: CMakeLists.txt
src/platform/orin/: README.md
src/platform/standalone/: CMakeLists.txt
src/platform/vdy_sil/: CMakeLists.txt  param_loader.cpp  param_loader.hpp  vdy_interface_c.cpp  vdy_interface_c.h
src/project/base/: ego_params.yaml
src/project/proj_alpha/: ego_params.yaml
tests/: CMakeLists.txt
tests/fixtures/: ego_params_test.yaml  function_params_test.yaml
tests/unit/: test_param_loader.cpp  test_vdy_function.cpp
